--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-wordcloud": "^1.2.7",
     "web-vitals": "^2.1.4"
   },
